# RESPIRE

./: .gitignore  README.md  pyproject.toml
data/: mtg_sample.py
generate/: README.md  batch_generate.py  build_manifest.py  input.jsonl  make_jsonl.py  run.sh
pilot/: README.md  run_pilot.py
pilot/data/: manifest_smoke.csv
src/reprise/: __init__.py  embed.py  recall.py  segment.py
src/respire/: audio.py  report.py
