[project]
name = "reprise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dulcean" }
]
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.11.1",
    "numpy>=2.4.6",
    "pandas>=3.0.5",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "soundfile>=0.14.0",
    "torch>=2.13.0",
    "torchaudio>=2.11.0",
    "transformers>=5.14.1",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
